CMAKE_MINIMUM_REQUIRED(VERSION 4.0)

SET(CMAKE_BUILD_TYPE DEBUG)

IF(CMAKE_BUILD_TYPE STREQUAL "DEBUG")
    MESSAGE(WARNING "Debug mode is on. Consider swithcing to RELEASE if you don't want to see debug messages")
ENDIF()

SET(CMAKE_CXX_COMPILER "g++")

PROJECT(CircularQueue LANGUAGES CXX)

INCLUDE_DIRECTORIES(include)
FILE(GLOB_RECURSE SRC src/*)

ADD_EXECUTABLE(CircularQueue ${SRC})